<resources>
    <string name="app_name">ReFit</string>
    <string name="empty" />
    <string name="percent">%</string>
    <string name="sign_up_agree_description">개정일자 : 2023.06.11
        \n\n\n제1조 (목적)\n\n이 약관은 RE-FIT ( 이하 ‘ 회사 ’ 라고 합니다 )이 제공하는 제반 서비스의 이용과 관련하여 회사와 회원과의 관리, 의무 및 책임사항, 기타 필요한 사항을 규정함을 목적으로 합니다.
        \n\n\n제2조 (정의)\n\n이 약관에서 사용하는 주요 용어의 정의는 다음과 같습니다.
        \n\n1. ’서비스’ 라 함은 구현되는 단말기 (pc, TV, 휴대형단말기 등의 각종 유무선 장치를 포함 ) 와 상관없이 ‘이용자’ 가 이용할 수 있는 회사가 제공하는 제반 서비스를 의미합니다.
        \n\n2. ‘이용자’ 란 이 약관에 따라 회사가 제공하는 서비스를 받는 ‘ 개인회원’, ‘기업회원’ 및 ‘비회원’ 을 말합니다.
        \n\n3. ‘개인회원’ 은 회사에 개인정보를 제공하여 회원등록을 한 사람으로, 회사로부터 지속적으로 정보를 제공받고 ‘ 회사 ’ 가 제공하는 서비스를 계속적으로 이용할 수 있는 자를 말합니다.
        \n\n4. ‘기업회원’ 은 회사에 기업정보 및 개인정보를 제공하여 회원등록을 한 사람으로, 회사로부터 지속적으로 정보를 제공받고 회사가 제공하는 서비스를 계속적으로 이용할 수 있는 자를 말합니다.
        \n\n5. ‘비회원’ 은 회원가입 없이 회사가 제공하는 서비스를 이용하는 자를 말합니다.
        \n\n6. ‘아이디(ID)’라 함은 회원의 식별과 서비스이용을 위하여 회원이 정하고 회사가 승인하는 문자 또는 문자와 숫자의 조합을 의미합니다.
        \n\n7. ‘비밀번호’라 함은 회원이 부여받은 아이디와 일치되는 회원임을 확인하고 비밀의 보호를 위해 회원 자신이 정한 문자(특수문자 포함)와 숫자의 조합을 의미합니다.
        \n\n8. ‘콘텐츠’란 정보통신망법의 규정에 따라 정보통신망에서 사용되는 부호·문자·음성·음향·이미지 또는 영상 등으로 정보 형태의 글, 사진, 동영상 및 각종 파일과 링크 등을 말합니다.
        \n\n\n제3조(약관 외 준칙)
        \n\n이 약관에서 정하지 아니한 사항에 대해서는 법령 또는 회사가 정한 서비스의 개별약관, 운영정책 및 규칙 등(이하 세부지침)의 규정에 따라 다릅니다. 또한 본 약관과 세부지침이 충돌할 경우에는 세부지침에 따릅니다.
        \n\n\n제4조(약관의 효력과 변경)
        \n\n1. 이 약관은 REFIT(이)가 제공하는 모든 인터넷서비스에 게시하여 공시합니다. 회사는 ‘전자상거래등에서의 소비자보호에 관한 법률(이하 ‘전자상거래법’이라 함)’, ‘약관의 규제에 관한 법률(이하’ 약관규제법’이라 함)’, ‘정보통신망 이용촉진 및 정보보호 등에 관한 법률(이하 ‘정보통신망법’이라 함)’등 본 서비스와 관련된 법령에 위배되지 않는 범위에서 이 약관을 변경할 수 있으며, 회사는 약관이 변경되는 경우에 변경된 약관의 내용과 시행일을 정하여, 그 시행일로부터 최소 7일 (이용자에게 불리하거나 중대한 사항의 변경은 30일) 이전부터 시행일 후 상당한 기간 동안 공지하고, 기존 이용자에게는 변경된 약관, 적용일자 및 변경사유(변경될 내용 중 중요사항에 대한 설명을 포함)를 별도의 전자적 수단(전자우편, 문자메시지, 서비스 내 전자쪽지발송, 알림 메시지를 띄우는 방법)으로 개별 통지합니다. 변경된 약관은 공지하거나 통지한 시행일로부터 효력이 발생합니다.
        \n\n2. 회사가 제1항에 따라 개정약관을 공지 또는 통지하는 경우 ‘변경에 동의하지 아니한 경우 공지일 또는 통지를 받은 날로부터 7이 (이용자에게 불리하거나 중대한 사항의 변경인 경우에는 30일) 내에 계약을 해지할 수 있으며, 계약해지의 의사표시를 하지 아니한 경우에는 변경에 동의한 것으로 본다.’ 라는 취지의 내용을 함께 통지합니다.
        \n\n3. 이용자가 제2항의 공지일 또는 통지를 받은 날로부터 7일(또는 이용자에게 불리하거나 중대한 사항의 변경인 경우에는 30일)내에 변경된 약관에 대해 거절의 의사를 표시하지 않았을 때에는 본 약관의 변경에 동의한 것으로 간주합니다.
        \n\n\n제5조(이용자에 대한 통지)
        \n\n1. 회사는 이 약관에 별도 규정이 없는 한 이용자에게 전자우편, 문자메시지(SMS), 전자쪽지, 푸쉬(Push)알림 등의 전자적 수단을 이용하여 통지할 수 있습니다.
        \n\n2. 회사는 이용자 전체에 대한 통지의 경우 7일 이상 회사가 운영하는 웹사이트 내의 게시판에 게시함으로써 제1항의 통지에 갈음할 수 있습니다. 다만, 이용자 본인의 거래와 관련하여 중대한 영향을 미치는 사항에 대하여는 제1항의 개별 통지를 합니다.
        \n\n3. 회사는 이용자의 연락처 미기재, 변경 후 미수정, 오기재 등으로 인하여 개별 통지가 어려운 경우에 한하여 전항의 공지를 함으로써 개별 통지를 한 것으로 간주합니다.
        \n\n\n제6조(이용계약의 체결)
        \n\n이용계약은 다음의 경우 체결됩니다.
        \n\n1. 이용자가 회원으로 가입하고자 하는 경우 이용자가 약관의 내용에 대하여 동의를 한 다음 회원가입신청을 하고 회사가 이러한 신청에 대하여 승낙한 때
        \n\n2. 이용자가 회원 가입 없이 이용할 수 있는 서비스에 대하여 회원 가입의 신청없이 서비스를 이용하고자 하는 경우에는 회사 서비스 이용을 위해 결제하는 때
        \n\n3. 이용자가 회원가입 없이 이용할 수 있는 서비스에 대하여 회원가입의 신청없이 무료 서비스를 이용하고자 하는 경우에는 그 무료 서비스와 관련된 사항의 저장 등 부가서비스를 이용하면서 위1호 및 2호의 절차를 진행한 때
        \n\n\n제7조(회사의 의무)
        \n\n1. 회사는 계속적이고 안정적인 서비스의 제공을 위하여 설비에 장애가 생기거나 멸실된 때에는 이를 지체없이 수리 또는 복구하며, 다음 각 호의 사유 발생 시 부득이한 경우 예고 없이 서비스의 전부 또는 일부의 제공을 일시 중지할 수 있습니다. 이 경우 그 사유 및 중지 기간 등을 이용자에게 지체없이 사후 공지합니다.
        \n\n가. 시스템의 긴급점검, 중설, 교제, 시설의 보수 또는 공사를 하기 위하여 필요한 경우
        \n\n나. 새로운 서비스를 제공하기 위하여 시스템교제가 필요하다고 판단되는 경우
        \n\n다. 시스템 또는 기타 서비스 설비의 장애, 유무선 Network 장애 등으로 정상적인 서비스 제공이 불가능할 경우
        \n\n라. 국가비상사태, 정전, 불가항력적 사유로 인한 경우
        \n\n2. 회사는 이용계약의 체결, 계약사항의 변경 및 해지 등 이용자와의 계약관련 절차 및 내용 등에 있어 이용자에게 편의를 제공하도록 노력합니다.
        \n\n3. 회사는 대표자의 성명, 상호, 주소, 전화번호, 모사전송번호(FAX), 통신판매업 신고번호, 이용약관, 개인정보취급방침 등을 이용자가 쉽게 알 수 있도록 온라인 서비스 초기화면에 게시합니다.
        \n\n\n제8조(사용자의 의무)
        \n\n1. 이용자는 이용자가입을 통해 이용신청을 하는 경우 사실에 근거하여 신청서를 작성해야 합니다. 이용자가 허위, 또는 타인의 정보를 등록한 경우 회사에 대하여 일체의 권리를 주장할 수 없으며, 회사는 이로 인하여 발생한 손해에 대하여 책임을 부담하지 않습니다.
        \n\n2. 이용자는 본 약관에서 규정하는 사항과 기타 회사가 정한 제반 규정, 회사가 공지하는 사항을 준수하여야 합니다. 또한 이용자는 회사의 업무를 방해하는 행위 및 회사의 명예를 훼손하는 행위를 하여서는 안 됩니다.
        \n\n3. 이용자는 주소, 연락처, 전자우편 주소 등 회원정보가 변경된 경우 즉시 온라인을 통해 이를 수정해야 합니다. 이 때 변경된 정보를 수정하지 않거나 수정이 지연되어 발생하는 책임은 이용자가 지게 됩니다.
        \n\n4. 이용자는 이용자에게 부여된 아이디와 비밀번호를 직접 관리해야 합니다. 이용자의 관리 소홀로 발생한 문제는 회사가 책임을 부담하지 않습니다.
        \n\n5. 이용자가 아이디, 닉네임, 기타 서비스 내에서 사용되는 명칭 등을 선정할 때에는 다음 각 호에 해당하는 행위를 해서는 안 됩니다.
        \n\n가. 회사가 제공하는 서비스의 공식 운영자를 사칭하거나 이와 유사한 명칭을 사용하여 다른 이용자에게 혼란을 주는 행위
        \n\n나. 선정적이고 음란한 내용이 포함된 명칭을 사용하는 행위
        \n\n다. 제3자의 상표권, 저작권 등 권리를 침해할 가능성이 있는 명칭을 사용하는 행위
        \n\n라. 제3자의 명예를 훼손하거나, 그 업무를 방해할 가능성이 있는 명칭을 사용하는 행위
        \n\n마. 기타 반사회적이고 관계법령에 저촉되는 내용이 포함된 명칭을 사용하는 행위
        \n\n6. 이용자는 회사의 명시적 동의가 없는 한 서비스 이용 권한, 기타 이용 계약상의 지위에 대하여 매도, 증여, 담보제공 등 처분행위를 할 수 없습니다.
        \n\n7. 본 조와 관련하여 서비스 이용에 있어 주의사항 등 그 밖의 자세한 내용은 운영정책으로 정하며, 이용자가 서비스 이용약관 및 운영정책을 위반하는 경우 서비스 이용제한, 민형사항의 책임 등 불이익이 발생할 수 있습니다.
        \n\n\n제9조(서비스의 제공)
        \n\n1. 회사의 서비스는 연중무휴, 1일 24시간 제공을 원칙으로 합니다. 다만 회사 시스템의 유지 보수를 위한 점검, 통신장비의 교체 등 특별한 사유가 있는 경우 서비스의 전부 또는 일부에 대하여 일시적인 제공 중단이 발생할 수 있습니다.
        \n\n2. 회사가 제공하는 개별 서비스에 대한 구체적인 안내사항은 개별 서비스 화면에서 확인할 수 있습니다.
        \n\n\n제10조(서비스의 제한 등)
        \n\n1. 회사는 전시, 사변, 천재지변 또는 이에 준하는 국가비상사태가 발생하거나 발생할 우려가 있는 경우와 전기통신사업법에 의한 기간통신사업자가 전기통신서비스를 중지하는 등 부득이한 사유가 있는 경우에는 서비스의 전부 또는 일부를 제한하거나 중지할 수 있습니다.
        \n\n2. 무료서비스는 전항의 규정에도 불구하고, 회사의 운영정책 등의 사유로 서비스의 전부 또는 일부가 제한되거나 중지될 수 있으며, 유료로 전환될 수 있습니다.
        \n\n3. 회사는 서비스의 이용을 제한하거나 정지하는 때에는 그 사유 및 제한 기간, 예정 일시 등을 지체없이 이용자에게 알립니다.
        \n\n4. 회사는 사전에 결제정보를 입력 받고, 무료로 제공중인 서비스를 유료로 전환할 경우, 그 사유와 유료 전환 예정 일시를 통지하고 유료 전환에 대한 이용자의 동의를 받습니다.
        \n\n\n제11조(서비스의 해제·해지 및 탈퇴 절차)
        \n\n1. 이용자가 이용계약을 해지하고자 할 때는 언제든지 홈페이지 상의 이용자 탈퇴 신청을 통해 이용계약 해지를 요청할 수 있습니다. 단, 신규가입 후 일정 시간 동안 서비스 부정이용 방지 등의 사유로 즉시 탈퇴가 제한될 수 있습니다.
        \n\n2. 회사는 이용자가 본 약관에서 정한 이용자의 의무를 위반한 경우 등 비정상적인 이용 또는 부당한 이용과 이용자 금지프로그램 사용하는 경우 또는 타인의 명예를 훼손하거나 모욕하는 방송과 게시물을 작성한 경우 이러한 행위를 금지허간 삭제를 요청하였음에도 불구하고 최초의 금지 또는 삭제 요청을 포함하여 2회 이상 누적되는 경우 이용자에게 통지하고, 계약을 해지할 수 있습니다.
        \n\n3. 회사는 이용자의 청약철회, 해제 또는 해지의 의사표시를 수신한 후 그 사실을 이용자에게 회신합니다. 회신은 이용자가 회사에 대하여 통지한 방법 중 하나에 의하고, 이용자가 회사에 대하여 통지한 연락처가 존재하지 않는 경우에는 회신하지 않을 수 있습니다.
        \n\n\n제12조(손해배상)
        \n\n1. 회사 또는 이용자는 상대방의 귀책에 따라 손해가 발생하는 경우 손해배상을 청구할 수 있습니다. 다만, 회사는 무료서비스의 장애, 제공 중단, 보관된 자료 멸실 또는 삭제, 변조 등으로 인한 손해에 대하여는 배상책임을 부담하지 않습니다.
        \n\n2. 회사가 제공하는 서비스의 이용과 관련하여 회사의 운영정책 및 개인 정보 보호정책, 기타 서비스별 이용 약관에서 정하는 내용에 위반하지 않는 한 회사는 어떠한 손해에 대하여도 책임을 부담하지 않습니다.
        \n\n\n제13초(면책사항)
        \n\n1. 회사는 천재지변 또는 이에 준하는 불가항력으로 인하여 서비스를 제공할 수 없는 경우에는 서비스 제공에 관한 책임을 지지 않습니다.
        \n\n2. 회사는 이용자의 귀책사유로 인한 서비스 이용장애에 대하여 책임을 지지 않습니다.
        \n\n3. 회사는 이용자가 서비스를 이용하며 기대하는 수익을 얻지 못한 것에 대하여 책임지지 않으며 서비스를 통하여 얻은 자료로 인한 손해 등에 대하여도 책임을 지지 않습니다.
        \n\n4. 회사는 이용자가 웹페이지에 게재한 내용의 신뢰도, 정확성 등 내용에 대해서는 책임지지 않으며, 이용자 상호간 또는 이용자와 제3자 상호간 서비스를 매개로 발생한 분재에 개입하지 않습니다.
        \n\n\n제14조(권리의 귀속)
        \n\n1. 회사가 제공하는 서비스에 대한 저작권 등 지식재산권은 회사에 귀속됩니다.
        \n\n2. 회사는 서비스와 관련하여 이용자에게 회사가 정한 조건 따라 회사가 제공하는 서비스를 이용할 수 있는 권한만을 부여하며, 이용자는 이를 양도, 판매, 담보제공 하는 등 처분행위를 할 수 없습니다.
        \n\n3. 제1항의 규정에도 불구하고 이용자가 직접 작성한 콘텐츠 및 회사의 제휴계약에 따라 제공된 저작물에 대한 지식재산권은 회사에 귀속되지 않습니다.
        \n\n\n제15조(관할법원 및 준거법)
        \n\n서비스와 관련하여 분쟁이 발생한 경우 관할법원은 회사 소재지 관할법원으로 정하며, 준거법은 대한민국의 법령을 적용합니다.
    </string>
    <string name="closet_dialog_cloth_delete_title">삭제 시 그동안 심은 나무와\n입력한 정보들이 다 삭제돼요!\n해당 옷을 삭제하시겠어요?</string>
    <string name="closet_dialog_cloth_delete_positive">네, 삭제할래요</string>
    <string name="closet_dialog_cloth_delete_negative">아니오</string>
    <string name="closet_dialog_cloth_selection_title">옷 선택</string>
    <string name="closet_dialog_cloth_register_photo_title">옷 등록</string>
    <string name="closet_dialog_cloth_register_photo_from_camera">카메라로 찍기</string>
    <string name="closet_dialog_cloth_register_photo_from_gallery">앨범에서 가져오기</string>
    <string name="cloth_register_cancel_title">지금 취소하면\n입력한 정보들이 전부 삭제돼요!\n옷 등록을 취소하시겠어요?</string>
    <string name="cloth_register_cancel_positive">네, 취소할래요</string>
    <string name="cloth_register_cancel_negative">아니오</string>
    <string name="closet_dialog_cloth_selection_option_recheck">목표 재설정</string>
    <string name="closet_dialog_cloth_selection_option_delete">옷 삭제</string>
    <string name="closet_dialog_cloth_selection_option_wear">오늘 입기</string>
    <string name="closet_dialog_cloth_selection_option_fix">정보 수정</string>
    <string name="closet_dialog_alert_limit_wearing">하나의 카테고리에서는 하루에 2번 이상 입기가 불가능해요!</string>
    <string name="closet_dialog_alert_limit_wearing_sub_version">* 하나의 카테고리에는 하루에 2번 이상 입기가 불가능해요! *</string>
    <string name="closet_dialog_alert_season">%1$s이 왔네요! 아직 목표를 설정하지 않은 %2%s 카테고리에 있는 옷들의 목표를 설정해 숲을 꾸며가는 건 어때요?</string>
    <string name="cloth_item_selection_dialog_wear_today">오늘 입기</string>
    <string name="cloth_item_selection_dialog_re_update_goal">목표 재설정</string>
    <string name="cloth_item_selection_dialog_fix_info">정보 수정</string>
    <string name="cloth_item_selection_dialog_deletion">옷 삭제</string>
    <string name="closet_dialog_clothing_double_single_category">하나의 카테고리에서는\n하루에 2번까지만 입을 수 있어요!</string>
    <string name="sign_up_valid_id">사용 가능한 아이디입니다</string>
    <string name="sign_up_valid_password">사용 가능한 비밀번호입니다</string>
    <string name="sign_up_valid_email">사용 가능한 이메일입니다</string>
    <string name="sign_up_valid_email_code">올바른 인증번호입니다</string>
    <string name="sign_up_valid_nickname">사용 가능한 닉네임입니다</string>
    <string name="sign_up_invalid_id">* 8-16자의 영문, 숫자를 포함해야 합니다</string>
    <string name="sign_up_invalid_password">* 영문 대문자, 소문자, 숫자, 특수기호 !, -, _ 중 모두 포함하며 8글자 이상 16글자 이하여야 합니다</string>
    <string name="sign_up_invalid_email">* 이메일 양식을 정확하게 입력해주세요</string>
    <string name="sign_up_request_email_code_error">* 오류입니다. 다시 시도해주세요</string>
    <string name="sign_up_invalid_email_code">* 인증번호를 다시 한 번 확인해주세요.</string>
    <string name="sign_up_invalid_nickname">* 이미 존재하는 닉네임입니다</string>
    <string name="sign_up_invalid_nickname_format">* 이미 존재하는 닉네임입니다</string>
    <string name="sign_up_invalid_birth">* YYYY/MM/DD or YYYYMMDD 형식으로 작성해야 합니다</string>
    <string name="sign_up_more_request_email_code">재전송</string>
    <string name="sign_up_request_email_code">인증</string>
    <string name="sign_up_complete_title_first">RE-FIT이 추구하는 가치에 공감해주신</string>
    <string name="sign_up_complete_title_second">%s님을 진심으로 환영해요 :)</string>
    <string name="sign_up_complete_subtitle_first">오늘부터 RE-FIT 과 함께\n옷과 환경 모두를 사랑하는 마음으로</string>
    <string name="sign_up_complete_subtitle_second">친환경 의류 생활을 시작해봐요!</string>
    <string name="sign_up_complete_subtitle_third">환경 지키기</string>
    <string name="my_page_name">ansrud</string>
    <string name="my_info_btn_update">수정하기</string>
    <string name="my_info_emailTxt">이메일</string>
    <string name="my_info_email">ansrud@gmail.com</string>
    <string name="my_info_idTxt">아이디</string>
    <string name="my_info_id">ansrud</string>
    <string name="my_info_nameTxt">이름(닉네임)</string>
    <string name="my_info_name">ansrud</string>
    <string name="my_info_dateTxt">생년월일</string>
    <string name="my_info_date">2000/09/27</string>
    <string name="my_page_genderTxt">성별</string>
    <string name="setting_title">환경설정</string>
    <string name="my_setting_stringTxt">정책</string>
    <string name="my_setting_string">이용약관</string>
    <string name="my_setting_string2">개인정보처리 방침</string>
    <string name="my_setting_logoutTxt">로그아웃</string>
    <string name="my_setting_logout">로그아웃 하기</string>
    <string name="setting_account_delete">탈퇴</string>
    <string name="setting_account_deleteTxt">탈퇴하기</string>
    <string name="app_info_description">세상에 없던 친환경 디지털 옷장</string>
    <string name="app_name_upper_case">RE-FIT</string>
    <string name="starting_top_button">RE-FIT 살펴보기</string>
    <string name="starting_bottom_button">로그인 하러가기</string>
    <string name="starting_find_id_password">아이디 / 비밀번호 찾기</string>
    <string name="starting_basic_sign_up">일반 회원가입</string>
    <string name="starting_sign_container_divider">|</string>
</resources>