<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.onboarding.StartingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/default_dark">

        <LinearLayout
            android:id="@+id/ll_starting_top_app_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_starting_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_starting_top_logo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginBottom="20dp"
                android:elevation="10dp"
                android:src="@drawable/ic_sign_in_logo" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_starting_top_title"
                style="@style/MediumFontKr.16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_info_description"
                android:textAlignment="center" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_starting_top_subtitle"
                style="@style/MediumFontKr.18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/app_name_upper_case"
                android:textAlignment="center"
                android:textColor="@color/green1" />

        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_starting_top"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/green1"
            android:text="@string/starting_top_button"
            android:textAppearance="@style/RegularFontKr.14"
            app:cornerRadius="14dp"
            app:layout_constraintBottom_toTopOf="@id/btn_starting_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_starting_bottom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/white"
            android:text="@string/starting_bottom_button"
            android:textAppearance="@style/RegularFontKr.14"
            android:textColor="@color/green1"
            app:cornerRadius="14dp"
            app:layout_constraintBottom_toTopOf="@id/ll_starting_sign_command"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/ll_starting_sign_command"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:gravity="center_vertical|center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_starting_find_id_password"
                style="@style/RegularFontKr.14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/starting_find_id_password"
                android:textColor="@color/dark2" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/RegularFontKr.14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:gravity="center_vertical"
                android:text="@string/starting_sign_container_divider"
                android:textColor="@color/dark2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_starting_basic_sign_up"
                style="@style/RegularFontKr.14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/starting_basic_sign_up"
                android:textColor="@color/dark2" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>