<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.mypage.MyInfoUpdateFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- 캐릭터 -->
                <FrameLayout
                    android:id="@+id/myPage_white_round"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="65dp"
                    android:layout_marginTop="13dp"
                    android:layout_marginEnd="65dp"
                    android:background="@drawable/ic_white_100"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/gender_image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription=""
                        android:src="@drawable/ic_mypage_woman" />

                </FrameLayout>

                <!-- 이름(닉네임) -->
                <TextView
                    android:id="@+id/myInfo_name"
                    style="@style/RegularFont.14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_page_name"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/myPage_white_round" />

                <!-- 이메일 ~ 성별 -->
                <LinearLayout
                    android:layout_width="296dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="26dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/myInfo_name">

                    <TextView
                        style="@style/BoldFontKr.14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/my_info_emailTxt"
                        android:textColor="@color/green1" />

                    <EditText
                        style="@style/RegularFont.12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="emailAddress"
                        android:background="@drawable/et_mypage_round_10"
                        android:gravity="center_vertical"
                        android:paddingStart="11dp"
                        android:paddingEnd="0dp"
                        android:paddingTop="13dp"
                        android:paddingBottom="13dp"
                        android:focusableInTouchMode="false"
                        android:text="@string/my_info_email"
                        android:textColor="@color/dark1"
                        android:inputType="textEmailAddress" />

                    <TextView
                        style="@style/BoldFontKr.14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/my_info_idTxt"
                        android:textColor="@color/green1" />

                    <EditText
                        style="@style/RegularFont.12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="username"
                        android:background="@drawable/et_mypage_round_10"
                        android:gravity="center_vertical"
                        android:paddingStart="11dp"
                        android:paddingEnd="0dp"
                        android:paddingTop="13dp"
                        android:paddingBottom="13dp"
                        android:focusableInTouchMode="false"
                        android:text="@string/my_info_id"
                        android:textColor="@color/dark1" />

                    <TextView
                        style="@style/BoldFontKr.14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/my_info_nameTxt"
                        android:textColor="@color/green1" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/et_nickname"
                            style="@style/RegularFont.12"
                            android:layout_width="match_parent"
                            android:layout_height="37dp"
                            android:autofillHints="name"
                            android:background="@drawable/et_mypage_round_10"
                            android:hint="@string/my_info_name"
                            android:inputType="textPersonName"
                            android:paddingStart="11dp"
                            android:paddingEnd="0dp"
                            android:text="@string/my_info_name"
                            android:textColor="@color/black" />

                        <android.widget.Button
                            android:id="@+id/btn_nickName_check"
                            style="@style/RegularFont.10"
                            android:layout_width="49dp"
                            android:layout_height="18dp"
                            android:layout_gravity="end"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="26dp"
                            android:background="@drawable/btn_my_info_check"
                            android:padding="0dp"
                            android:shadowColor="@android:color/transparent"
                            android:text="중복확인"
                            android:textColor="@color/white" />

                    </FrameLayout>

                    <TextView
                        android:id="@+id/able_name"
                        style="@style/MediumFont.10"
                        android:textColor="@color/green1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:visibility="gone"
                        android:text="* 사용 가능한 이름(닉네임)입니다."/>

                    <TextView
                        android:id="@+id/enable_name"
                        style="@style/MediumFont.10"
                        android:textColor="@color/red"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:layout_marginTop="8dp"
                        android:text="* 이미 존재하는 이름(닉네임)입니다."/>

                    <TextView
                        style="@style/BoldFontKr.14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/my_info_dateTxt"
                        android:textColor="@color/green1" />

                    <EditText
                        android:id="@+id/et_birthday"
                        style="@style/RegularFont.12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="birth"
                        android:background="@drawable/et_mypage_round_10"
                        android:inputType="date"
                        android:paddingStart="11dp"
                        android:paddingEnd="0dp"
                        android:paddingTop="13dp"
                        android:paddingBottom="13dp"
                        android:text="@string/my_info_date"
                        android:textColor="@color/black" />

                    <TextView
                        style="@style/BoldFontKr.14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/my_page_genderTxt"
                        android:textColor="@color/green1" />

                    <Spinner
                        android:id="@+id/spinner_gender"
                        style="@style/RegularFont.12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_arrow_bottom_14"
                        android:background="@drawable/et_mypage_round_10"
                        android:textSize="12sp" />

                    <android.widget.Button
                        android:id="@+id/btn_my_info_update"
                        style="@style/RegularFont.14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="33dp"
                        android:layout_marginBottom="32dp"
                        android:background="@drawable/btn_my_info_pw"
                        android:clickable="true"
                        android:text="@string/my_info_btn_update"
                        android:textColor="@color/white" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

</layout>